fix connect wallet button align

--- a/js/frontend/src/components/layout/header/header.module.scss
+++ b/js/frontend/src/components/layout/header/header.module.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.wallet {
+  margin-left: auto;
+}
+
 .nav {
   padding: 8px 0;
 
